@@ -42,10 +42,37 @@
                         <version>3.0.1</version>
                         <configuration>
                             <additionalJOptions>
+                                <additionalJOption>--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED</additionalJOption>
                                 <additionalJOption>--add-exports=java.base/sun.security.util=ALL-UNNAMED</additionalJOption>
                                 <additionalJOption>--add-exports=java.base/sun.net=ALL-UNNAMED</additionalJOption>
                                 <additionalJOption>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</additionalJOption>
+                                <additionalJOption>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</additionalJOption>
                             </additionalJOptions>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.0</version>
+                        <configuration>
+                            <source>11</source>
+                            <target>11</target>
+                            <compilerArgs>
+                                <arg>--add-exports</arg><arg>java.base/jdk.internal.reflect=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg><arg>java.base/sun.net=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg><arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg><arg>java.desktop/sun.java2d=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports=java.base/sun.security.util=ALL-UNNAMED
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -152,8 +179,8 @@
 
     <properties>
         <jdkLevel>1.8</jdkLevel>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <google.guava.version>30.1.1-jre</google.guava.version>
